--- a/video.html
+++ b/video.html
@@ -19,7 +19,7 @@
     <h1>Treći projektni zadatak: video, reklama</h1>
     <p>Kratka reklama za akrilnu boju.</p>
 	
-	<video src="Reklama.mp4" controls></video>
+	<video src="reklama.mp4" controls></video>
 	
 </body>
 </html>
